--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.10.61",
     "mongoose": "^8.3.3",
     "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.2.2",
+    "twilio": "^5.0.4",
     "typedi": "^0.10.0",
     "winston": "^3.13.0",
     "zod": "^3.23.5"
