--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^9.0.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -23,6 +24,7 @@
     "reflect-metadata": "^0.2.2",
     "twilio": "^5.0.4",
     "typedi": "^0.10.0",
+    "uuid": "^9.0.1",
     "winston": "^3.13.0",
     "zod": "^3.23.5"
   },
