--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^8.3.3",
     "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.2.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "twilio": "^5.0.4",
     "typedi": "^0.10.0",
     "uuid": "^9.0.1",
@@ -34,6 +36,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.14",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
