--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "dev": "ts-node-dev --transpile-only --respawn src/index.ts",
-    "start": "npx tsc && node dist/index.js"
+    "build": "npm i && npx tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
