--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "toolbox",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "test": "jest",
     "dev": "ts-node-dev --transpile-only --respawn src/index.ts",
