--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.3.3",
     "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.2.2",
+    "stripe": "^15.5.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "twilio": "^5.0.4",
