--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "swagger-ui-express": "^5.0.0",
     "twilio": "^5.0.4",
     "typedi": "^0.10.0",
+    "typescript": "^5.4.5",
     "uuid": "^9.0.1",
     "winston": "^3.13.0",
     "zod": "^3.23.5"
@@ -40,7 +41,6 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "ts-node-dev": "^2.0.0"
   }
 }
