--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=5001
-APP_ENV=
+APP_ENV=production
 DB_CONNECTION_STRING="mongodb://localhost:27017/toolbox"
 DB_ATLAS=
 SALT_FACTOR=
@@ -8,7 +8,7 @@ DEVELOPMENT_SERVER=http://localhost:5001/api
 
 # MAIL
 MAIL_HOST=
-MAIL_PORT=
+MAIL_PORT=465
 MAIL_USER=
 MAIL_PWD=
 MAIL_SENDER="ToolBox"
@@ -26,6 +26,17 @@ STRIPE_SECRET_KEY_LIVE=
 STRIPE_API_VERSION="2024-04-10"
 STRIPE_WEBHOOK_ENDPOINT_SECRET_TEST=
 STRIPE_WEBHOOK_ENDPOINT_SECRET_LIVE=
+
+##### PARTNERS #####
+
+#NOTCHPAY
+NOTCHPAY_BASE_URL=https://api.notchpay.co
+NOTCHPAY_PUBLIC_KEY_TEST=
+NOTCHPAY_PUBLIC_KEY_LIVE=
+NOTCHPAY_SECRET_KEY_TEST=
+NOTCHPAY_SECRET_KEY_LIVE=
+NOTCHPAY_WEBHOOK_SECRET_HASH_TEST=,
+NOTCHPAY_WEBHOOK_SECRET_HASH_LIVE=,
 
 # TOKENS
 ACCESS_TOKEN_TTL="5h"
