--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "jest",
-    "dev": "APP_ENV=development ts-node-dev --transpile-only --respawn src/index.ts",
+    "dev": "cross-env APP_ENV=development ts-node-dev --transpile-only --respawn src/index.ts",
     "build": "npm i && npx tsc",
     "start": "node dist/index.js"
   },
@@ -16,11 +16,13 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.10.61",
     "mongoose": "^8.3.3",
+    "node-localstorage": "^3.0.5",
     "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.2.2",
     "stripe": "^15.5.0",
@@ -37,6 +39,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/node-localstorage": "^1.3.3",
     "@types/nodemailer": "^6.4.14",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
